--- a/index.html
+++ b/index.html
@@ -3,59 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <title>Landing page</title>
 </head>
 <body>
   <header class="header">
-    <div class="header-logo">Header logo</div>
-    <nav>
-      <div class="nav-link">header link one</div>
-      <div class="nav-link">header link two</div>
-      <div class="nav-link">header link three</div>
-    </nav>
+    <div class="nav">
+      <div class="header-logo">Header logo</div>
+      <div class="nav-right">
+        <div class="nav-link">header link one</div>
+        <div class="nav-link">header link two</div>
+        <div class="nav-link">header link three</div>
+      </div>
+    </div>
     <div class="intro">
       <div class="header-left">
         <div class="header-title">This website is awesome</div>
-        <div class="header-text">This website has some subtext</div>
+        <div class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
         <button class="header-button">Sign up</button>
       </div>
-      <img class="header-image" src="" alt="">
+      <img class="header-image" src="./images/padajji.jpg" alt="padajji">
     </div>
   </header>
   <main>
-    <div class="main-title"></div>
+    <div class="main-title">Some random information.</div>
     <div class="main-images">
       <div class="main-info">
-        <img class="main-image" src="" alt="">
-        <div class="main-text"></div>      
+        <img class="main-image" src="./images/pic1.jpg" alt="">
+        <div class="main-text">Вау, котик!</div>
       </div>
       <div class="main-info">
-        <img class="main-image" src="" alt="">
-        <div class="main-text"></div>      
+        <img class="main-image" src="./images/pic2.jpg" alt="">
+        <div class="main-text">Какой милый хлебушек!</div>
       </div>
       <div class="main-info">
-        <img class="main-image" src="" alt="">
-        <div class="main-text"></div>      
+        <img class="main-image" src="./images/pic3.jpg" alt="">
+        <div class="main-text">Потягушечки!</div>
       </div>
       <div class="main-info">
-        <img class="main-image" src="" alt="">
-        <div class="main-text"></div>      
+        <img class="main-image" src="./images/pic4.jpg" alt="">
+        <div class="main-text">Ой, облачко!</div>
       </div>
     </div>
     <div class="quote">
-      <div class="quote-text"></div>
-      <div class="quote-autor"></div>
+      <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or Maybe people will actually read it. Who knows? All I know is that it looks nice.
+      </div>
+      <div class="quote-autor">-Thor, God of Thunder</div>
     </div>
     <div class="action">
       <div class="action-left">
-        <div class="action-title"></div>
-        <div class="action-text"></div>
+        <div class="action-title">Call to action! It's time!</div>
+        <div class="action-text">Sign up for our product by clicking that button right over there!</div>
       </div>
       <button class="action-button">Sign up</button>
     </div>
   </main>
   <footer>
-    <div class="footer-text"></div>
+    <div class="footer-text">Copyright © The Odin Project 2024</div>
   </footer>  
 </body>
 </html>
